[project]
name = "depth-anything-v2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "matplotlib>=3.10.1",
    "opencv-python>=4.11.0.86",
    "torch>=2.5.1",
]

[tool.uv.sources]
torch = [
    { index = "pytorch-cu" },
]
torchvision = [
    { index = "pytorch-cu" },
]
