[project]
name = "depth-anything-v2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "gradio>=5.25.1",
    "matplotlib>=3.10.1",
    "opencv-python>=4.11.0.86",
    "torch>=2.5.1",
    "torchvision>=0.21.0",
]

[tool.uv.sources]
torch = [
    { index = "pytorch-cu" },
]
torchvision = [
    { index = "pytorch-cu" },
]

[[tool.uv.index]]
name = "pytorch-cu"
url = "https://download.pytorch.org/whl/cu124"
explicit = true
